<resources>
    <string name="app_name">Collectx</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_again">Scan again</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="principal">Principal Amount ₹ </string>
    <string name="interest">Interest per Year %</string>
    <string name="duration">How Many Years</string>
    <string name="emi">EMI/Month ₹</string>
    <string name="totalInterest">Total Interest</string>
    <string name="submit">Submit</string>


</resources>
